--- a/docs/gnome-glib.texi
+++ b/docs/gnome-glib.texi
@@ -116,7 +116,7 @@ after the call to await-yield! in the current a-sync or compose-a-sync
 block will execute on the next iteration through the loop.  It is
 intended to be called within a waitable procedure invoked by a-sync
 (which supplies the 'await' and 'resume' arguments).  It's effect is
-similar to calling await-task!  with a task that does nothing.
+similar to calling await-glib-task with a task that does nothing.
 
 This procedure must (like the a-sync procedure) be called in the same
 thread as that in which the relevant event loop runs: for this purpose
@@ -124,11 +124,8 @@ thread as that in which the relevant event loop runs: for this purpose
 argument, or if no 'loop' argument is provided or #f is provided as
 the 'loop' argument, then the default event loop.
 
-Exceptions may propagate out of this procedure if they arise while
-setting up (that is, before the task starts), which shouldn't happen
-unless memory is exhausted.  Exceptions arising in code appearing
-after the call to this procedure in the a-sync or compose-a-sync block
-will propagate out of g-main-loop-run.
+This procedure should not throw any exceptions unless memory is
+exhausted.
 
 This procedure is first available in version 0.12 of this library.
 
@@ -184,7 +181,7 @@ Exceptions arising during execution of the generator, if not caught by
 a handler procedure, will terminate the program.  Exceptions thrown by
 the handler procedure will propagate out of g-main-loop-run.
 Exceptions thrown by 'proc', if not caught locally, will also
-propagate out of g-main-loop-run!.
+propagate out of g-main-loop-run.
 
 This procedure is first available in version 0.9 of this library.
 
@@ -241,7 +238,7 @@ setting up (that is, before the task starts), which shouldn't happen
 unless memory is exhausted.  Exceptions arising during execution of
 the generator, if not caught locally, will propagate out of
 await-glib-generator.  Exceptions thrown by 'proc', if not caught
-locally, will propagate out of g-main-loop-run!.
+locally, will propagate out of g-main-loop-run.
 
 This procedure is first available in version 0.9 of this library.
 
@@ -281,7 +278,7 @@ because, when 'thunk' is executed, this procedure is waiting on
 'await', so 'await' and 'resume' cannot be used again in 'thunk'
 (although 'thunk' can call a-sync to start another series of
 asynchronous operations with a new await-resume pair).  In retrospect,
-this procedure offers little over await-glib-sleep!.
+this procedure offers little over await-glib-sleep.
 
 This procedure must (like the a-sync procedure) be called in the same
 thread as that in which the default glib main loop runs.
@@ -322,11 +319,8 @@ nothing.
 This procedure must (like the a-sync procedure) be called in the same
 thread as that in which the default glib main loop runs.
 
-Exceptions may propagate out of this procedure if they arise while
-setting up (that is, before the first call to 'await' is made), which
-shouldn't happen unless memory is exhausted.  Exceptions arising in
-code appearing after the call to this procedure in the a-sync or
-compose-a-sync block concerned will propagate out of g-main-loop-run.
+This procedure should not throw any exceptions unless memory is
+exhausted.
 
 This procedure is first available in version 0.12 of this library.
 
