--- a/docs/event-loop.texi
+++ b/docs/event-loop.texi
@@ -1387,13 +1387,10 @@ non-blocking port, the event loop will not be blocked by this
 procedure even if only individual bytes can be written at any one
 time.  It is intended to be called within a waitable procedure invoked
 by a-sync (which supplies the 'await' and 'resume' arguments), and
-this procedure is implemented using a-sync-write-watch!.  If an
-exceptional condition ('excpt) is encountered, #f will be returned,
-otherwise #t will be returned (but an exceptional condition should
-never be encountered on an output port).  The 'loop' argument is
-optional: this procedure operates on the event loop passed in as an
-argument, or if none is passed (or #f is passed), on the default event
-loop.
+this procedure is implemented using a-sync-write-watch!.  The 'loop'
+argument is optional: this procedure operates on the event loop passed
+in as an argument, or if none is passed (or #f is passed), on the
+default event loop.
 
 A port can be made non-blocking with this:
 
@@ -1420,6 +1417,26 @@ block on write and are always signalled as ready.
 
 This procedure must (like the a-sync procedure) be called in the same
 thread as that in which the event loop runs.
+
+Exceptions may propagate out of this procedure if they arise while
+setting up (that is, before the first call to 'await' is made), say
+because a regular file is passed to this procedure or memory is
+exhausted.  With versions of this library before 0.13, this procedure
+would also raise an exception if write errors were encountered on the
+first attempt to write to the port, and any exceptions because of
+write errors on subsequent writes would propagate out of
+event-loop-run!.  Having write exceptions (say, because of EPIPE)
+interfering with anything using the event loop in this way was not a
+good approach, so from version 0.13 of this library if a write
+exception arises in this procedure, the exception will not be
+propagated but will instead be returned by this procedure so the user
+can decide what to do with it.  It is returned as a list, with car
+comprising an 'a-sync-i/o-exception symbol as a marker, cadr
+comprising the key of the i/o exception which has arisen (which for
+this procedure will always be 'c-write-error), and cddr as the args of
+the exception.  Otherwise this procedure returns #t, or #f if an
+exceptional condition ('excpt) is encountered (but an exceptional
+condition should never be encountered on an output port).
 
 Exceptions may propagate out of this procedure if they arise while
 setting up (that is, before the first call to 'await' is made), say
@@ -1444,13 +1461,10 @@ loop will not be blocked by this procedure even if only individual
 characters or part characters can be written at any one time.  It is
 intended to be called within a waitable procedure invoked by a-sync
 (which supplies the 'await' and 'resume' arguments), and this
-procedure is implemented using await-put-bytevector!.  If an
-exceptional condition ('excpt) is encountered, #f will be returned,
-otherwise #t will be returned (but an exceptional condition should
-never be encountered on an output port).  The 'loop' argument is
-optional: this procedure operates on the event loop passed in as an
-argument, or if none is passed (or #f is passed), on the default event
-loop.
+procedure is implemented using await-put-bytevector!.  The 'loop'
+argument is optional: this procedure operates on the event loop passed
+in as an argument, or if none is passed (or #f is passed), on the
+default event loop.
 
 A port can be made non-blocking with this:
 
@@ -1480,10 +1494,23 @@ thread as that in which the event loop runs.
 
 Exceptions may propagate out of this procedure if they arise while
 setting up (that is, before the first call to 'await' is made), say
-because a conversion error is encountered, a regular file is passed to
-this procedure or write errors occur on the first attempt to write to
-the port.  Subsequent exceptions (say, because of subsequent port
-errors) will propagate out of event-loop-run!.
+because a regular file is passed to this procedure, memory is
+exhausted or a conversion error arises.  With versions of this library
+before 0.13, this procedure would also raise an exception if write
+errors were encountered on the first attempt to write to the port, and
+any exceptions because of write errors on subsequent writes would
+propagate out of event-loop-run!.  Having write exceptions (say,
+because of EPIPE) interfering with anything using the event loop in
+this way was not a good approach, so from version 0.13 of this library
+if a write exception arises in this procedure, the exception will not
+be propagated but will instead be returned by this procedure so the
+user can decide what to do with it.  It is returned as a list, with
+car comprising an 'a-sync-i/o-exception symbol as a marker, cadr
+comprising the key of the i/o exception which has arisen (which for
+this procedure will always be 'c-write-error), and cddr as the args of
+the exception.  Otherwise this procedure returns #t, or #f if an
+exceptional condition ('excpt) is encountered (but an exceptional
+condition should never be encountered on an output port).
 
 The bytes to be sent will be converted from the passed in string
 representation using the encoding of 'port' if a port encoding has
