--- a/docs/event-loop.texi
+++ b/docs/event-loop.texi
@@ -1438,12 +1438,21 @@ the exception.  Otherwise this procedure returns #t, or #f if an
 exceptional condition ('excpt) is encountered (but an exceptional
 condition should never be encountered on an output port).
 
-Exceptions may propagate out of this procedure if they arise while
-setting up (that is, before the first call to 'await' is made), say
-because a regular file is passed to this procedure or write errors
-occur on the first attempt to write to the port.  Subsequent
-exceptions (say, because of subsequent port errors) will propagate out
-of event-loop-run!.
+Here is how EPIPE might be tested for:
+@example
+(set-default-event-loop!) ;; if none has yet been set
+(a-sync (lambda (await resume)
+	  (let ((res (await-put-bytevector! await resume port bv)))
+	    (when (and (list? res)
+		       (eq? (car res) 'a-sync-i/o-exception))
+		  (if (= (caar (cddddr res)) EPIPE)
+		      (begin
+			... do something to cater for EPIPE ...)
+		      (begin
+			;; possibly rethrow the exception
+			(apply throw (cdr res))))))))
+(event-loop-run!)
+@end example
 
 This procedure is first available in version 0.11 of this library.
 
@@ -1511,6 +1520,22 @@ this procedure will always be 'c-write-error), and cddr as the args of
 the exception.  Otherwise this procedure returns #t, or #f if an
 exceptional condition ('excpt) is encountered (but an exceptional
 condition should never be encountered on an output port).
+
+Here is how EPIPE might be tested for:
+@example
+(set-default-event-loop!) ;; if none has yet been set
+(a-sync (lambda (await resume)
+	  (let ((res (await-put-string! await resume port "test")))
+	    (when (and (list? res)
+		       (eq? (car res) 'a-sync-i/o-exception))
+		  (if (= (caar (cddddr res)) EPIPE)
+		      (begin
+			... do something to cater for EPIPE ...)
+		      (begin
+			;; possibly rethrow the exception
+			(apply throw (cdr res))))))))
+(event-loop-run!)
+@end example
 
 The bytes to be sent will be converted from the passed in string
 representation using the encoding of 'port' if a port encoding has
